# Super-PySnake

./: README.md  config.json  config.txt  pyproject.toml  requirements.txt  run.py
assets/maps/: default.json
game/: app.py  dungeon.py  food.py  main.py  score_display.py  snake.py  square.py  types.py
utils/: serializable.py
